# active_semantic_perception

./: .gitignore  .gitmodules  README.md
exploration/: CMakeLists.txt  package.xml
exploration/config/: frontier_config.yaml  pipeline_config.yaml
exploration/scripts/: calculate_uncertainty.py  exploration_pipeline.py  f1_score_plot.py  frontier_baseline.py  ged_score_plot.py  graph_planning.py  habitat_collect_hm3d.py  llm_completion.py  local_planning.py  mid_planning.py
exploration/test/: llm_completion_test.py  scene_graph_visualize_2d.py
exploration/visualization/: ig_vis.py
install/: active_semantic_perception.rosinstall
mapping/hydra/cmake/: HydraSourceDependencies.cmake
mapping/hydra_ros/hydra_ros/: CMakeLists.txt
mapping/khronos/khronos/: CMakeLists.txt
mapping/scene_segment_ros/: README.md  package.xml
mapping/scene_segment_ros/config/: cfg_pFCN.yaml  cfg_yoso.yaml
mapping/scene_segment_ros/src/: modelRunner.py  output.py  requirements.txt  segmenter_pFCN.py  segmenter_yoso.py
mapping/semantic_inference/semantic_inference_msgs/: CMakeLists.txt
mapping/spark_dsg/src/: bounding_box.cpp
mapping/visual_sgraphs/: CMakeLists.txt  README.md  package.xml
mapping/visual_sgraphs/.devcontainer/: devcontainer.json
mapping/visual_sgraphs/config/: README.md  system_params.yaml
mapping/visual_sgraphs/doc/: INSTALLATION.md  template_aruco_ros.launch
mapping/visual_sgraphs/docker/: README.md  requirements.txt
task_def/: objects_habitat_apartment.yaml  objects_habitat_apartment_00573.yaml  region_tasks_habitat_apartment.yaml
(+143 files in other folders)
